# python-chrome-devtools-protocol

./: pyproject.toml
cdp/: __init__.py  accessibility.py  audits.py  autofill.py  background_service.py  browser.py  cache_storage.py  css.py  debugger.py  device_access.py  dom.py  dom_debugger.py  dom_snapshot.py  dom_storage.py  emulation.py  event_breakpoints.py  fed_cm.py  fetch.py  headless_experimental.py  heap_profiler.py  indexed_db.py  input_.py  io.py  media.py  network.py  overlay.py  page.py  performance.py  preload.py  profiler.py  runtime.py  security.py  storage.py  system_info.py  target.py  tracing.py  web_authn.py
docs/api/: audits.rst  css.rst  fed_cm.rst  preload.rst  storage.rst
generator/: generate.py
