[tool.poetry]
name = "chrome-devtools-protocol"
packages = [{include = "cdp"}]
version = "0.6.0"
description = "Python type wrappers for Chrome DevTools Protocol (CDP)"
authors = ["Mark E. Haase <mehaase@gmail.com>", "Brian Mackintosh <bcmackintosh@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hyperiongray/python-chrome-devtools-protocol"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet"
]

[tool.poetry.dependencies]
python = "^3.10"
deprecation = "^2.1.0"

[tool.poetry.dev-dependencies]
inflection = "^0.5.1"
mypy = "^1.6.0"
pytest = "^7.4.2"
sphinx = "^7.2.6 "
sphinx-autodoc-typehints = "^1.24.0"
sphinx-rtd-theme = "1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
